Update src variables link.

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <div class="Layout__column-quick Layout__column--lg-8 Layout__column--lg-offset-2 Layout__column--text-center">
                     <h2>Customization</h2>
                     <p>Need more columns, different gutter sizes, a larger or smaller layout... or don't like your BEM classes starting with a capital letter? We've got you covered.</p>
-                    <p><strong>Simply check out <a target="_blank" rel="noopener noreferrer" href="#">src/common/variables</a> to see what's available to tweak.</strong></p>
+                    <p><strong>Simply check out <a target="_blank" rel="noopener noreferrer" href="https://github.com/enzyme/zeus/blob/master/src/common/variables.scss">src/common/variables</a> to see what's available to tweak.</strong></p>
                 </div>
             </div>
         </div>
