Add OG and twitter tags.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     <title>ZEUS &#8212; A novel css grid.</title>
     <meta name="Description" content="A novel mobile first flexbox BEM css grid framework that will rock your socks off.">
     <meta name="Keywords" content="ZEUS, BEM, CSS, grid, flexbox, web">
+    <meta property="og:title" content="ZEUS">
+    <meta property="og:site_name" content="ZEUS">
+    <meta property="og:url" content="http://enzyme.github.io/zeus/">
+    <meta property="og:description" content="A novel mobile first flexbox BEM css grid framework that will rock your socks off.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://enzyme.github.io/zeus/images/fb.jpg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@r3oath">
+    <meta name="twitter:title" content="ZEUS">
+    <meta name="twitter:description" content="A novel mobile first flexbox BEM css grid framework that will rock your socks off.">
+
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Roboto|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="bin/index.css">
 </head>
