Style guide fixes, add powered by Qoob, copy changes.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="Layout__row-quick">
                 <div class="Layout__column-quick Layout__column--text-center">
-                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/enzyme/zeus" class="Button">Get started</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/enzyme/zeus" class="Button">Let's get started</a>
                 </div>
             </div>
         </div>
@@ -182,6 +182,15 @@
                     </div>
                 </div>
             </section>
+
+            <div class="Layout__row-quick">
+                <div class="Layout__column-quick Layout__column--text-center">
+                    <div class="Powered">
+                        <a target="_blank" rel="noopener noreferrer" class="Powered__image" href="https://enzyme.github.io/qoob"><img src="images/qoob.svg" alt="Qoob logo"></a>
+                        <p>This example is powered by <a target="_blank" rel="noopener noreferrer" href="https://enzyme.github.io/qoob">Qoob</a>.</p>
+                    </div>
+                </div>
+            </div>
 
             <div class="Layout__row-quick">
                 <div class="Layout__column-quick Layout__column--lg-8 Layout__column--lg-offset-2 Layout__column--text-center">
@@ -340,7 +349,7 @@
         <div class="Layout-quick">
             <div class="Layout__row-quick">
                 <div class="Layout__column-quick Layout__column--text-center">
-                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/enzyme/zeus" class="Button">Get started</a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://github.com/enzyme/zeus" class="Button">View on GitHub</a>
                 </div>
             </div>
             <div class="Layout__row-quick">
