Update page title.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>ZEUS &#8212; A novel css grid.</title>
+    <title>ZEUS &#8212; a novel css grid.</title>
     <meta name="Description" content="A novel mobile first flexbox BEM css grid framework that will rock your socks off.">
     <meta name="Keywords" content="ZEUS, BEM, CSS, grid, flexbox, web">
     <meta property="og:title" content="ZEUS">
